# ft_ls

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml
.github/workflows/: integration_tests_ubuntu.yml
include/: data_obj.h  flags.h  ft_ls.h  printing.h  sorting.h  t_node.h
srcs/: collect_children_nodes.c  ft_str3join.c  get_directory_information.c  get_filetype.c  ls_data.c  main.c  parsing.c  print.c  sort.c  symbolic_links.c  t_node.c  utilities.c
srcs/printing/: print.c  print_long_listing_format.c  t_column_sizes.c
srcs/sorting/: compare_rootnodes.c  sort.c  sort_on_names.c  sort_on_timestamps.c
tests/: test_flags.sh  test_regular.sh  test_single.sh  test_usergroupid.sh
